--- a/test/src/views/payment/validated.scss
+++ b/test/src/views/payment/validated.scss
@@ -1,27 +1,82 @@
-div.payment{
-  div.wrapper.validated{
+div.payment.validated{
+  border: 2px solid #b6cfed;
+  border-right-width: 3px;
+  border-radius: 20px;
+  div.wrapper{
     width: 100vw;
+    padding: 0 14vw;
     header{
-      font-size: 6vw;
-      padding: 16vw 0 5vw 0;
+      font-size: 5.5vw;
+      padding: 14vw 0 5vw 0;
     }
+    // 用户名
     div.info{
       //margin: 10px 0 40px 0;
+      font-size: 5vw;
       margin-bottom: 9vw;
       padding-right: 1.5vw;
-      font-size: 5vw;
       opacity: .9;
     }
     div.total,div.success{
-      font-size: 9.5vw;
-      height: 136px;
-      padding: 11vw 2vw 0 0;
-      //color: white;
+      height:15vh;
+      padding: 5.5vh 1.4vw 0 0;
+      // total 分隔线
       &::before{
-        left: 125px;top: -16px;
-        width: 100px;height: 30px;
-        font-size: 20px;
-        line-height: 30px;
+        font-size: 3.5vw;
+        left: 26vw;top: -4vw;
+        width: 20vw;height: 8vw;
+        line-height: 8vw;
+      }
+    }
+    // 金额
+    div.total{
+      font-size: 9.2vw;
+      padding-left: 1.2vw;
+      i{
+        position: relative;
+        &::before{
+          left: -5.2vw; top: .7vw;
+          font-size: 7vw;
+        }
+      }
+    }
+    // 付款说明
+    div.note{
+      font-size: 3vw;
+    }
+    // Paypal区域
+    div#container-e5ds905{
+      margin-top: 6vh;
+      padding-top: 7vw;
+      min-height: 50vw;
+      &::before{
+        font-size: 3.5vw;
+        left: 18vw;top: -4vw;
+        width: 38vw;height: 8vw;
+        line-height: 8vw;
+      }
+    }
+    //footer{
+    //  margin-top: 4vh;
+    //  div.cards{
+    //    height: 6.4vw;
+    //    background: url("@/assets/payment_icons2.png");
+    //    background-size: cover;
+    //  }
+    //}
+    div.complete{
+      margin-top: 8vw;
+      font-size: 4vw;
+      min-height: 20vw;
+    }
+    div.closeBtn{
+      font-size: 3vw;
+      width: 25vw;height:10vw;line-height: 10vw;
+      text-align: center;
+      margin: 0 auto 5vh auto;
+      cursor: pointer;
+      &:hover{
+        filter:brightness(1.2);
       }
     }
   }
