--- a/test/src/views/payment/validated.scss
+++ b/test/src/views/payment/validated.scss
@@ -1,7 +1,8 @@
+
 div.payment.validated{
-  border: 2px solid #b6cfed;
-  border-right-width: 3px;
-  border-radius: 20px;
+  //border: 3px solid #0070ba;
+  //border-top-width: 3px;
+  //border-radius: 10px;
   div.processing{
     padding-bottom: 14vh;
     font-size: 5vw;
